<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="18dp"
    android:paddingLeft="18dp"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="70dp"
                android:gravity="center"
                android:src="@drawable/huluhagerelogo" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="Email Address"
                android:maxLines="1"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_marginTop="70dp"/>
            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="......"
                android:textColorHint="#fff"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_next_week_black_24dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"/>
            <CheckBox
                android:id="@+id/chick_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="#fff"
                android:text="Remember Me"
                android:padding="8dp"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="Log in"
                android:textColor="#f16f7d"
                android:textAllCaps="false"
                android:clickable="true"
                android:padding="16dp"
                android:layout_marginTop="24dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup"
                android:text="Don't have an account? sign up here"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/whatever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forget your Password?"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#fff"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="16dp"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>