...
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/img_authentication"
                android:tint="@color/white" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgView_passwordIcon"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imgView_passwordIcon"
                android:background="@color/editTextBG"
...
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/img_authentication"
                android:tint="@color/white" />

            <EditText
                android:id="@+id/rePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgView_repasswordIcon"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imgView_repasswordIcon"
                android:background="@color/editTextBG"
...
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:src="@drawable/img_email"
                android:tint="@color/white" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgView_emailIcon"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imgView_emailIcon"
                android:background="@color/editTextBG"
...
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="I agree to the Terms of Service"
            android:textColor="#fff" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chkBox1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
...
            android:fontFamily="sans-serif-medium"
            android:text="SIGN UP"
            android:clickable="true"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
...
